--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
     "prisma:studio": "npx prisma studio",
-    "start:dev": "nodemon --watch src -L src/index.js",
+    "start:dev": "nodemon --watch src --watch prisma -L src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Oleg Vaskevich",
@@ -23,7 +23,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
