--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "docker:build": "docker-compose build --no-cache",
     "prisma:migrate": "npx prisma migrate dev --name init",
     "prisma:push": "npx prisma db push",
-    "prisma:studio": "npx prisma studio",
+    "prisma:studio": "npx prisma studio --browser none",
     "start:dev": "nodemon --watch src --watch prisma -L src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
