--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "prisma:push": "npx prisma db push",
     "prisma:studio": "npx prisma studio --browser none",
     "start:dev": "nodemon --watch src --watch prisma -L src/index.js",
+    "lint": "eslint src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Oleg Vaskevich",
@@ -32,6 +33,9 @@
   },
   "devDependencies": {
     "axios": "^1.1.3",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.5.0"
   }
