--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "axios": "^1.1.3",
