--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,13 @@
     "prisma:studio": "npx prisma studio --browser none",
     "start:dev": "nodemon --watch src --watch prisma -L src/index.js",
     "lint": "eslint src --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "npm run test -- --watch",
+    "test:cov": "npm run test -- --coverage"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
   },
   "author": "Oleg Vaskevich",
   "license": "ISC",
@@ -39,6 +45,7 @@
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.5.0"
   }
