--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
-PORT=5000
+PORT=4000
 CLIENT_PORT=3000
+CLIENT_URL="http://localhost:${CLIENT_PORT}"
 
 HASH_ROUNDS=10
 JWT_SECRET_KEY=access-secret
