feat: add server prod

--- a/server/.env.example
+++ b/server/.env.example
@@ -8,15 +8,15 @@ JWT_SECRET_REFRESH_KEY=refresh-secret
 TOKEN_EXPIRE_TIME=5m
 TOKEN_REFRESH_EXPIRE_TIME=10m
 
-MYSQL_PORT=3306
-MYSQL_ROOT_PASSWORD=root1password
-MYSQL_USER=user
-MYSQL_PASSWORD=password
-MYSQL_DB=mysql_db
-DATABASE_URL="mysql://root:${MYSQL_ROOT_PASSWORD}@localhost:${MYSQL_PORT}/mysql_db?schema=public&connect_timeout=300"
-
-ADMINER_HOST_PORT=5100
-ADMINER_PORT=8080
+DB_PORT=5432
+DB_DEV_PORT=5000
+DB_USER=user
+DB_PASS=password
+DB_NAME=db
+# To use prisma client inside of a docker container you have to provide respective link - with name of service 
+# in the docker-compose instead of host e.g. 'db' instead of 'localhost'
+DATABASE_INNER_URL="postgresql://${DB_USER}:${DB_PASS}@db:${DB_DEV_PORT}/${DB_NAME}?schema=public&connect_timeout=300"
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@localhost:${DB_DEV_PORT}/${DB_NAME}?schema=public&connect_timeout=300"
 
 # mail
 MAIL_HOST=smtp.example.com
